<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activity.NewPasswordActivity"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo"
                android:layout_margin="@dimen/_8sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/newpassword"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/text_size_22"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center"
                android:textAllCaps="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/newpasswordcontent"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/text_size_18"
                android:layout_margin="@dimen/_24sdp"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/edit_box"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/password"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/edit_box"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/confirmpassword"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:background="@drawable/btn_background"
                android:drawableRight="@drawable/ic_right_arrow_white"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/text_size_18"
                android:id="@+id/submit_tv"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>