<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePasswordActivity">
    <include layout="@layout/tool_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tool_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentpass"
            android:fontFamily="@font/titilium"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:textColor="@color/primary_text"
            android:layout_marginTop="@dimen/_30sdp"
            android:textSize="@dimen/text_size_16"/>
        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/myprofile_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:background="@drawable/edit_box"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            app:cardBackgroundColor="@color/colorwhite">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Enter Current Password"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newpass"
            android:fontFamily="@font/titilium"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:textColor="@color/primary_text"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/text_size_16"/>
        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:background="@drawable/edit_box"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            app:cardBackgroundColor="@color/colorwhite">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/newpassword"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmpassword"
            android:fontFamily="@font/titilium"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:textColor="@color/primary_text"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/text_size_16"/>
        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:background="@drawable/edit_box"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            app:cardBackgroundColor="@color/colorwhite">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Enter Confirm Password"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_background_colour_accent"
        android:layout_alignParentBottom="true"
        android:drawableRight="@drawable/ic_right_arrow_white"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:id="@+id/login_btn"/>
</RelativeLayout>