<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activity.LoginActivity"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo"
                android:layout_margin="@dimen/_8sdp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/edit_box"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/email"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18"
                android:id="@+id/email_id_et"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:background="@drawable/edit_box"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/password"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18"
                android:id="@+id/password_et"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/forgotpassword"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/text_size_18"
                android:id="@+id/forgot_password_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:background="@drawable/btn_background"
                android:drawableRight="@drawable/ic_right_arrow_white"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/text_size_18"
                android:id="@+id/login_btn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_24sdp"
                android:text="@string/singup"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/text_size_18"
                android:id="@+id/signup_tv"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:orientation="horizontal"
                android:weightSum="3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.3"
                    android:background="@color/colorwhite" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="Or"
                    android:textColor="@color/colorwhite"
                    android:textSize="@dimen/text_size_18" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.3"
                    android:background="@color/colorwhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@color/facebook"
                    android:src="@drawable/ic_facebook"
                    android:id="@+id/facebook_btn"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@color/gmail"
                    android:src="@drawable/ic_google_plus"
                    android:id="@+id/google_btn"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@color/twitter"
                    android:src="@drawable/ic_twitter"
                    android:id="@+id/twitter_btn"/>
                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/twitterLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"/>
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="gone" />
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>