<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MyProfileActivity">

    <include layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/proffileImage"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/ic_default_profile" />

                <ImageView
                    android:id="@+id/takeimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:src="@drawable/ic_camera" />

            </FrameLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/titilium"
            android:text="@string/firstname"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_16" />

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/myprofile_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/edit_box"
            app:cardBackgroundColor="@color/colorwhite"
            app:cardCornerRadius="@dimen/_5sdp"
            app:elevation="@dimen/_5sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/firstname"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|text"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18" />
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/titilium"
            android:text="@string/lastname"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_16" />

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/edit_box"
            app:cardBackgroundColor="@color/colorwhite"
            app:cardCornerRadius="@dimen/_5sdp"
            app:elevation="@dimen/_5sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/lastname"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|text"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18" />
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/titilium"
            android:text="@string/email"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_16" />

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/edit_box"
            app:cardBackgroundColor="@color/colorwhite"
            app:cardCornerRadius="@dimen/_5sdp"
            app:elevation="@dimen/_5sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/ic_green_tick"
                android:enabled="false"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/text_size_18" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_background_colour_accent"
        android:drawableRight="@drawable/ic_right_arrow_white"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold" />
</RelativeLayout>